update colors and plan

--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -6,10 +6,10 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #144266   ;
+  --secondary-color: #78C4D7 ;
+  --accent1-color: #03763D;
+  --accent2-color: #DDFCAD;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "IM Fell French Canon";
