--- a/wwr/styles/wwr-styles.css
+++ b/wwr/styles/wwr-styles.css
@@ -36,6 +36,8 @@ h2 {
 header {
   background-color: var(--secondary-color);
   color: white;
+  display: grid;
+  grid-template-columns: 150px auto;
 }
 
 footer {
@@ -43,6 +45,9 @@ footer {
   color: white;
   padding: 25px 50px;
   margin-top: 200px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 footer a {
@@ -80,6 +85,11 @@ footer .social img {
   padding-top: 10px;
 }
 
+nav {
+  display: flex;
+  justify-content: space-around;
+}
+
 nav a {
   text-align: center;
   color: var(--nav-link-color);
@@ -93,11 +103,38 @@ nav a:hover {
 
 #logo_link {
   padding-top: 5px;
+  justify-self: center;
+  align-self: center;
 }
 
-#hero-msg h1 h4 {
-  text-align: center;
+#hero {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  margin-top: -100px;
 }
+
+#hero-box {
+  grid-column: 1/4;
+  grid-row: 1/3;
+  z-index: -1;
+}
+
+#hero-msg {
+  grid-column: 2/3;
+  grid-row: 1/2;
+  margin-top: 100px;
+}
+
+#hero-msg h1 {
+  text-align: center;
+  color: var(--headline-color-on-white);
+}
+
+#hero-msg h4 {
+  text-align: center;
+  color: white;
+}
+
 #hero-img {
   width: 100%;
 }
@@ -122,16 +159,19 @@ main section {
   text-align: center;
 }
 
-main section img{
+main section img {
   box-sizing: border-box;
 }
 
 #background {
   height: 725px;
   background-color: var(--accent1-color);
+  grid-column: 1/11;
+  grid-row: 4/9;
 }
 
-.book, .join{
+.book,
+.join {
   background-color: var(--nav-background-color);
   color: var(--nav-link-color);
   text-decoration: none;
@@ -156,6 +196,9 @@ main section img{
   color: var(--nav-link-color);
   line-height: 1.5em;
   padding: 35px;
+  grid-column: 6/10;
+  grid-row: 6/7;
+  box-shadow: 5px 5px 10px #6f7364;
 }
 
 .msg h2 {
@@ -170,10 +213,94 @@ main section img{
   padding-bottom: 15px;
 }
 
-.rivers-card, .camping-card, .rapids-card{
+.home-grid{
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+}
+
+.rivers-card {
   margin: 200px 0;
+  grid-column: 2/4;
+  grid-row: 2/3;
+}
+
+.camping-card {
+  margin: 200px 0;
+  grid-column: 5/7;
+  grid-row: 2/3;
+}
+
+.rapids-card {
+  margin: 200px 0;
+  grid-column: 8/10;
+  grid-row: 2/3;
 }
 
 .card-img {
   border: 10px solid var(--accent1-color);
+  width: 100%;
+  transition: transform 0.5s;
+  box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover {
+  opacity: 0.6;
+  transform: scale(1.1);
+}
+
+.mountains {
+  border: 10px solid var(--accent1-color);
+  width: 100%;
+  grid-column: 2/7;
+  grid-row: 5/8;
+  box-shadow: 5px 5px 10px #6f7364;
+}
+
+/* Media Queries */
+
+@media screen and (max-width: 900px) {
+  #hero,
+  .home-grid {
+    display: block;
+    height: auto;
+  }
+  nav,
+  footer {
+    flex-direction: column;
+  }
+  nav a {
+    display: block;
+    padding: 15px;
+  }
+  #hero {
+    margin-top: 0;
+  }
+  #hero-msg {
+    margin-top: 0;
+  }
+  #hero-msg h4 {
+    display: none;
+  }
+  .home-title {
+    font-size: 25px;
+    color: #6f7364;
+  }
+  .rivers-card,
+  .camping-card,
+  .rapids-card {
+    margin: 50px auto;
+    width: 60%;
+  }
+  #background {
+    display: none;
+  }
+  .mountains,
+  .msg {
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+  }
+  footer {
+    margin-top: 25px;
+  }
 }
