--- a/knights-football/styles/site-plan.css
+++ b/knights-football/styles/site-plan.css
@@ -15,15 +15,15 @@ Fonts are separated by a | */
   --paragraph-font: 'Helvetica Neue Condensed', 'Helvetica Neue', Calibri, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
+  --headline-color-on-white: var(--accent1-color);  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: var(--accent1-color); /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --paragraph-background-color: var(--secondary-color); /* paragraph background color */
+  --nav-link-color: white;
+  --nav-background-color: var(--primary-color);
+  --nav-hover-link-color: var(--accent1-color);
+  --nav-hover-background-color: var(--secondary-color);
 }
 
 
