--- a/wwr/styles/rivers-styles.css
+++ b/wwr/styles/rivers-styles.css
@@ -44,7 +44,7 @@ footer {
     background-color: var(--primary-color);
     color: white;
     padding: 25px 50px;
-    margin-top: 200px;
+    /* margin-top: 200px; */
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -111,12 +111,18 @@ nav a:hover {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     margin-top: -100px;
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0.95) 0%, rgba(255, 255, 255, 0) 60%);
 }
 
 #hero-box {
     grid-column: 1/4;
     grid-row: 1/3;
     z-index: -1;
+}
+
+#hero-img {
+    width: 100%;
+    height: 100%;
 }
 
 #hero-msg {
@@ -135,8 +141,11 @@ nav a:hover {
     font-family: var(--heading-font);
 }
 
-#hero-img {
-    width: 100%;
+.home-grid {
+    display: grid;
+    /* background-color: rgba(3, 118, 61, 0.7); */
+    padding-top: 80px;
+    padding-bottom: 80px;
 }
 
 .home-title {
@@ -150,16 +159,22 @@ nav a:hover {
     text-align: center;
 }
 
-/* main section {
-    text-align: center;
+.book {
+    background-color: var(--nav-background-color);
+    color: var(--nav-link-color);
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
-main section img {
-    box-sizing: border-box;
-} */
+.book:hover {
+    background-color: var(--nav-hover-background-color);
+    color: var(--nav-hover-link-color);
+}
 
 .rivers {
-    background-color: rgba(3, 118, 61, 0.6);
     padding: 50px;
 }
 
@@ -167,53 +182,90 @@ main section img {
     color: var(--headline-color-on-color);
     font-family: var(--heading-font);
     text-align: center;
-  }
-  
-  .rivers p {
+}
+
+.rivers p {
     color: var(--paragraph-color-on-color);
     font-size: 0.8em;
     line-height: 1.5em;
     font-family: var(--paragraph-font);
     padding-bottom: 15px;
-  }
-
-.picture {
-    grid-area: picture;
-}
-
-.picture img {
-    width: 100%;
-    height: 100%;
-}
-
-.content {
-    grid-area: content;
-    margin-left: 20px;
-    margin-right: 20px;
-}
-
-.header {
-    grid-area: header;
 }
 
 .wrapper1 {
     display: grid;
-    grid-gap: 10px;
-    grid-template-columns: repeat(2 1fr);
-    grid-template-areas:
-        "picture picture header header"
-        "picture picture content content";
+    grid-template-columns: repeat(4, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 25px;
+}
+
+.wrapper1 .picture {
+    grid-column: 1/3;
+    grid-row: 2/ span 2;
+}
+
+.wrapper1 .picture img {
+    width: 100%;
+    height: 100%;
+}
+
+.wrapper1 .header {
+    grid-column: 3/5;
+    grid-row: 2/ span 1;
+}
+
+.wrapper1 .content {
+    grid-column: 3/5;
+    grid-row: 2/ span 2;
+    margin-top: 50px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.wrapper1 .under-box {
+    grid-column: 2/5;
+    grid-row: 1/ span 4;
+    background-color: var(--accent1-color);
+    z-index: -1;
 }
 
 .wrapper2 {
     display: grid;
-    grid-gap: 10px;
-    grid-template-columns: repeat(2 1fr);
-    grid-template-areas:
-        "header header picture picture"
-        "content content picture picture";
+    grid-template-columns: repeat(4, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 25px;
 }
 
+.wrapper2 .picture {
+    grid-column: 5/3;
+    grid-row: 2/span 2;
+}
+
+.wrapper2 .picture img {
+    width: 100%;
+    height: 100%;
+}
+
+.wrapper2 .header {
+    grid-column: 1/3;
+    grid-row: 2/2;
+}
+
+.wrapper2 .content {
+    grid-column: 1/3;
+    grid-row: 2/span 2;
+    margin-top: 50px;
+    margin-left: 20px;
+    margin-right: 20px;
+    align-self: center;
+}
+
+.wrapper2 .under-box {
+    grid-column: 1/4;
+    grid-row: 1/span 4;
+    background-color: var(--accent1-color);
+    z-index: -1;
+}
 
 /* Media Queries */
 
