--- a/wwr/styles/rivers-styles.css
+++ b/wwr/styles/rivers-styles.css
@@ -111,7 +111,7 @@ nav a:hover {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     margin-top: -100px;
-    background: linear-gradient(0deg, rgba(255, 255, 255, 0.95) 0%, rgba(255, 255, 255, 0) 60%);
+    /* background: linear-gradient(0deg, rgba(255, 255, 255, 0.95) 0%, rgba(255, 255, 255, 0) 60%); */
 }
 
 #hero-box {
@@ -201,22 +201,23 @@ nav a:hover {
 
 .wrapper1 .picture {
     grid-column: 1/3;
-    grid-row: 2/ span 2;
+    grid-row: 2 / span 2;
+    align-self: center;
 }
 
 .wrapper1 .picture img {
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 .wrapper1 .header {
     grid-column: 3/5;
-    grid-row: 2/ span 1;
+    grid-row: 2 / span 1;
 }
 
 .wrapper1 .content {
     grid-column: 3/5;
-    grid-row: 2/ span 2;
+    grid-row: 2 / span 2;
     margin-top: 50px;
     margin-left: 20px;
     margin-right: 20px;
@@ -224,7 +225,7 @@ nav a:hover {
 
 .wrapper1 .under-box {
     grid-column: 2/5;
-    grid-row: 1/ span 4;
+    grid-row: 1 / span 4;
     background-color: var(--accent1-color);
     z-index: -1;
 }
@@ -238,12 +239,13 @@ nav a:hover {
 
 .wrapper2 .picture {
     grid-column: 5/3;
-    grid-row: 2/span 2;
+    grid-row: 2 / span 2;
+    align-self: center;
 }
 
 .wrapper2 .picture img {
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 .wrapper2 .header {
@@ -253,7 +255,7 @@ nav a:hover {
 
 .wrapper2 .content {
     grid-column: 1/3;
-    grid-row: 2/span 2;
+    grid-row: 2 / span 2;
     margin-top: 50px;
     margin-left: 20px;
     margin-right: 20px;
@@ -262,7 +264,7 @@ nav a:hover {
 
 .wrapper2 .under-box {
     grid-column: 1/4;
-    grid-row: 1/span 4;
+    grid-row: 1 / span 4;
     background-color: var(--accent1-color);
     z-index: -1;
 }
@@ -296,22 +298,63 @@ nav a:hover {
         font-size: 25px;
         color: #6f7364;
     }
-    .rivers-card,
-    .camping-card,
-    .rapids-card {
-        margin: 50px auto;
-        width: 60%;
-    }
     #background {
         display: none;
     }
-    .mountains,
-    .msg {
-        width: 80%;
-        display: block;
-        margin: 0 auto;
-    }
     footer {
         margin-top: 25px;
+    }
+
+    .rivers p {
+        font-size: 0.8em;
+        line-height: 1.5em;
+    }
+
+    .rivers h2 {
+        font-size: 1.2em;
+    }
+
+    .wrapper1,
+    .wrapper2 {
+        display: grid;
+        grid-template-columns: repeat(3, auto);
+        grid-column-gap: 25px;
+        grid-row-gap: 5px;
+    }
+
+    .wrapper1 .picture,
+    .wrapper2 .picture {
+        grid-column: 2/3;
+        grid-row: 1/3;
+        align-self: center;
+    }
+
+    .wrapper1,
+    .wrapper2 .picture img {
+        width: 100%;
+        height: auto;
+    }
+
+    .wrapper1 .header,
+    .wrapper2 .header {
+        grid-column: 2/3;
+        grid-row: 3/4;
+    }
+
+    .wrapper1 .content,
+    .wrapper2 .content {
+        grid-column: 2/3;
+        grid-row: 4/5;
+        margin-top: 5px;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .wrapper1 .under-box,
+    .wrapper2 .under-box {
+        grid-column: 1/4;
+        grid-row: 2/5;
+        background-color: var(--accent1-color);
+        z-index: -1;
     }
 }
