--- a/knights-football/styles/main-styles.css
+++ b/knights-football/styles/main-styles.css
@@ -534,10 +534,11 @@ h4 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 25px;
+    margin: 10px;
     padding: 25px;
     text-align: center;
     background-color: var(--secondary-color);
+    border-radius: 15px;
 }
 
 .stats-box {
@@ -549,6 +550,76 @@ h4 {
     border: 3px solid var(--accent2-color);
     border-radius: 15px;
 }
-.stats-box h3{
+.stats-box h3 {
     margin-top: 0;
+}
+
+.schedule-area {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin: 25px;
+    padding: 25px;
+    text-align: center;
+}
+.schedule-area h3{
+    margin-top: 0;
+}
+.game {
+    background-color: var(--secondary-color);
+    border-radius: 15px;
+}
+.game-stats {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 15px;
+    text-align: center;
+    
+}
+.game-stats img {
+    width: 60px;
+    height: 60px;
+}
+.game-stats h5 {
+    margin: 0;
+}
+.game-stats .game-time{
+    font-size: 1.5em;
+    font-weight: 800;
+    width: 160px;
+    padding: 15px;
+    background-color: var(--accent1-color);
+    color: var(--accent2-color);
+    border: 3px solid var(--accent2-color);
+    border-radius: 15px;
+}
+.game-stats .opponent {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+.game-stats .score-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    background-color: var(--accent1-color);
+    color: var(--accent2-color);
+    border: 3px solid var(--accent2-color);
+    border-radius: 15px;
+}
+.game-stats .wl {
+    font-size: 2em;
+    font-weight: 700;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.game-stats .score{
+    font-size: 1.25em;
+    font-weight: 600;
 }
