--- a/wwr/styles/contactus-styles.css
+++ b/wwr/styles/contactus-styles.css
@@ -275,18 +275,20 @@ form {
   }
   
   #feedback {
-    background-color: antiquewhite;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
+    background-color: #84E1BC;
+    /* position: absolute; */
+    /* top: 0; */
+    /* left: 0;
+    right: 0; */
     padding: .5em;
     /* make this element invisible until we are ready for it */
-    display: none;      
+    display: none;    
+    text-align: center;  
+    margin: 15px;
 }
-.moveDown {
+/* .moveDown {
     margin-top: 3em;
-}
+} */
 
 
 
