--- a/knights-football/styles/site-plan.css
+++ b/knights-football/styles/site-plan.css
@@ -5,8 +5,8 @@ Fonts are separated by a | */
 
 :root {
     /* change the values below to your colors from your palette */
-    --primary-color: #750e23;
-    --secondary-color: #c1b6a8;
+    --primary-color: #643335;
+    --secondary-color: #afa9a0;
     --accent1-color: #212c64;
     --accent2-color: #ededed;
     --accent3-color: #221a08;
