--- a/knights-football/styles/main-styles.css
+++ b/knights-football/styles/main-styles.css
@@ -400,10 +400,14 @@ blockquote cite:before {
     margin: 50px;
     padding: 25px;
 }
-
-.roster-area .definitions {
+.roster-area .def-area {
     grid-column: 1/5;
-    grid-row: 1/2;
+    grid-row: 2/2;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+}
+.roster-area .definitions {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -411,8 +415,14 @@ blockquote cite:before {
     padding: 25px;
 }
 
-.roster-area .definitions h3,
+.roster-area h2, h3,
 h4 {
+    grid-column: 1/13;
+    display: flex;
+    justify-content: center;
+    margin: 0 0 20px 0;
+}
+.definitions h4, h5 {
     margin: 0;
 }
 .roster-area .definitions ul {
@@ -422,7 +432,7 @@ h4 {
 
 .roster-area .player-list {
     grid-column: 6/13;
-    grid-row: 1/2;
+    grid-row: 2/2;
     display: flex;
     flex-direction: column;
     grid-row-gap: 5px;
@@ -565,7 +575,7 @@ h4 {
     background-color: var(--secondary-color);
     padding: 10px;
 }
-.coach .name{
+.coach .name {
     grid-column: 1/13;
     grid-row: 1/1;
     font-size: 2rem;
